<resources>
    <string name="app_name">Forex Technical Summary</string>
    <string name="action_settings">Settings</string>
    <string name="section_format" translatable="false">Hello World from section: %1$d</string>
    <string name="title_activity_main_tab" translatable="false">FTS</string>
    <string name="action_refresh">Refresh</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="unable_load">Nothing loaded</string>
    <string name="load_success">Successfully loaded </string>
    <string name="items"> items</string>
    <string name="ok" translatable="false">OK</string>
    <string name="action_sort">Sort by..</string>
    <string name="sort">Name</string>
    <string name="sort_by">Sort by ..</string>
    <string name="action_auto_update">Auto update</string>
    <string name="set_auto_update_time">Interval in minutes</string>
    <string name="empty" translatable="false" />
    <string name="last_upd">Last update on:</string>
    <string name="action_about">Disclaimer/Policy</string>
    <string name="disclaimer">"Disclaimer: Greyog App Products, Fusion Media and Investing.com will not accept any liability for loss or damage as a result of reliance on the information contained within this tool including data, quotes, charts and buy/sell signals. Please be fully informed regarding the risks and costs associated with trading the financial markets, it is one of the riskiest investment forms possible. Currency trading on margin involves high risk, and is not suitable for all investors. Before deciding to trade foreign exchange or any other financial instrument you should carefully consider your investment objectives, level of experience, and risk appetite.     "</string>
    <string name="strong_up">Strong trend up</string>
    <string name="neutral">No trend</string>
    <string name="strong_down">Strong trend down</string>
    <string name="trend_down">Trend down</string>
    <string name="trend_up">Trend up</string>
    <string name="sort_by_name">Name</string>
    <string name="search">Search</string>
    <string name="last_update">Last update</string>
    <string name="share">Share</string>
    <string name="share_title">Share</string>
    <string name="policy">Privacy policy:          https://www.appodeal.com/privacy-policy</string>
    <array name="list_item_long_menu">
        <item>View details</item>
        <item>Delete</item>
    </array>
    <array name="notification_list_long_menu">
        <item>Edit</item>
        <item>Delete</item>
    </array>
    <string name="title_activity_tabs" translatable="false">TabsActivity</string>
    <string name="tab_text_1">Forex</string>
    <string name="tab_text_2">Stock</string>
    <string name="tab_text_3">Indices</string>
    <string name="tab_text_4">Commodities</string>
    <string name="connection_ok">Connection OK</string>
    <string name="connection_error">Connection ERROR</string>
    <string name="added_element_to_list">Added element to list.</string>
    <string name="too_many_elements">Too many elements! Delete something before add.</string>
    <string name="something_wrong">Something went wrong.</string>
    <string name="already_exists">Already exists.</string>
    <string name="title_activity_notifications">Manage Notifications</string>
    <string name="new_notification">New notification</string>
    <string name="cancel">Cancel</string>
    <string name="switch_notifications">Switch Notifications</string>
    <string name="notification_service_alert">There are notifications at list but service is off. Do you want to turn on background notification service?</string>
    <string name="notifications_on">Notifications turned ON</string>
    <string name="notifications_off">Notifications turned OFF</string>
    <string name="menu_title_leave_feedback">Leave feedback</string>
    <string name="title_leave_feedback">App Satisfaction Meter</string>
    <string name="please_we_need">Hi there! Measure your satisfaction here.</string>
    <string name="leave_me_alone">Later</string>
    <string name="next_time">OK, we\'ve got it.</string>
    <string name="share_text">Just made some profit with Forex Technical Summary</string>
    <string name="share_using">Share using</string>
    <array name="notification_conditions">
        <item>Any</item>
        <item>Strong Buy</item>
        <item>Buy</item>
        <item>Any Buy</item>
        <item>Neutral</item>
        <item>Any Sell</item>
        <item>Sell</item>
        <item>Strong Sell</item>
    </array>
</resources>
